@@ -16,12 +16,20 @@ https://github.com/JPNaude/Qtilities/issues/milestones
     ============================
     QtilitiesLogging:
     ============================
+    [+] The console logger engine now support ANSI escape code formatting. When enabled (default) messages
+        printed in the console will be coloured according to their types. New functions include
+        ConsoleLoggerEngine::setConsoleFormattingEnabled(), ConsoleLoggerEngine::consoleFormattingEnabled()
+        and ConsoleLoggerEngine::setConsoleFormattingHint().
+        Also, a bunch of known colors and escape related characters were added to LoggerEngines.h.
+        Note that this does not work on Windows.
 
     ============================
     QtilitiesCore:
     ============================
     [+] Added QtilitiesProcess::setProcessBufferMessageTypeHint(). Also, added new
         class ProcessBufferMessageTypeHint used in this function.
+    [+] Added FileUtils::toUnixPath().
+    [+] Added FileUtils::writeStringToFile().
 
     [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
         subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
@@ -37,6 +45,7 @@ https://github.com/JPNaude/Qtilities/issues/milestones
     [+] WidgetLoggerFrontends now has the option to specify where and if toolbars with actions related to the
         displayed log should be shown.
     [+] Added TaskLogNoInitialization to the TaskLogInitialization enumeration in TaskManagerGui. This allows tasks to be used more efficiently in console applications.
+    [+] Add ability to refresh icons in Mode Manager dynamically at runtime. See issue #96.
 
     [#] Slightly improved layout in SingleTaskWidget.
 
@@ -55,6 +64,7 @@ https://github.com/JPNaude/Qtilities/issues/milestones
     ============================
     Plugins:
     ============================
+    [*] Cleaned up memory leak in HelpPlugin.
 
 
 ================================
